--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -1,4 +1,4 @@
-name: Deploy to Firebase Hosting on merge
+name: Deploy Flutter Web to Firebase Hosting
 
 on:
   push:
@@ -10,13 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Setup Flutter
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.19.0"
+          channel: stable
+
+      - name: Verify Flutter installation
+        run: flutter --version
 
       - name: Install dependencies
         run: flutter pub get
@@ -24,7 +27,7 @@ jobs:
       - name: Build Flutter Web
         run: flutter build web
 
-      - name: Deploy to Firebase
+      - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
